General: resolved overflow isasue

--- a/force-app/main/default/aura/SOI_MyLayout/SOI_MyLayout.css
+++ b/force-app/main/default/aura/SOI_MyLayout/SOI_MyLayout.css
@@ -32,22 +32,31 @@
 .THIS .content{
     width: 100%;
     margin: 0;
-    height: 100%;
+    
     padding: 2%;
     padding-left: 300px;
     background-color: #F2F2F2;
+
+    /* height: 100%; */
+    height: 100%;
+    padding-bottom: 0;
 }
 
 .THIS .innercontent{
     background-color: white;
-    height: 90%;
-    width: 95%;
-    margin-left: 2%;
+    width: 100%;
     padding: 2%;
     -webkit-box-shadow: 0px 0px 6px 3px rgba(110, 110, 110, 0.13);
     -moz-box-shadow: 0px 0px 6px 3px rgba(110, 110, 110, 0.13);
     box-shadow: 0px 0px 6px 3px rgba(110, 110, 110, 0.13);
-    overflow: auto;
+    
+    /*height: 90%;*/
+    /*overflow: auto;*/
+
+    padding-bottom: 0;
+    margin-bottom: 0;
+    height: 100%;
+    overflow: hidden;
 }
 
 /*
