--- a/force-app/main/default/lwc/soi_athleteList/soi_athleteList.css
+++ b/force-app/main/default/lwc/soi_athleteList/soi_athleteList.css
@@ -1,4 +1,9 @@
- .searchbar{
+.app-wrapper{
+    height: 100%;
+    margin: 0;
+}
+
+.searchbar{
     margin-bottom: 4%;
     width: 50%;
     margin-left: 22%;
@@ -7,6 +12,9 @@
 .searchAndNew{
     display: flex;
     flex-direction: row;
+}
+.table-container{
+    height: 100vh;
 }
 
 .newAthlete{
